--- a/.github/workflows/_update_image.yml
+++ b/.github/workflows/_update_image.yml
@@ -1,14 +1,11 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and Publish
+name: Build Image
 
 on:
   workflow_call:
     inputs:
-      directory:
-        required: true
-        type: string
       buildFile:
         required: true
         type: string
@@ -36,7 +33,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: ${{ inputs.directory }}
           file: ${{ inputs.buildFile }}
           push: true
           tags: dahool/${{ inputs.tag }}
