update image build and workflow

--- a/.github/workflows/_update_image.yml
+++ b/.github/workflows/_update_image.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           file: ${{ inputs.buildFile }}
           push: true
-          tags: dahool/${{ inputs.tag }}
+          tags: ${{ inputs.tag }}
 
 
           
