--- a/.github/workflows/update_images.yml
+++ b/.github/workflows/update_images.yml
@@ -10,10 +10,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-jdk11-node18:
+      uses: ./.github/workflows/_update_image.yml
+      with:
+        buildFile: "maven/jdk11/Node18"
+        tag: "dahool/maven-node:maven3-openjdk-11-nodelts,dahool/maven-node:maven3-openjdk-11-node18"
+      secrets: inherit
+  build-jdk11-node16:
     uses: ./.github/workflows/_update_image.yml
     with:
-      buildFile: "maven/jdk11/Node18"
-      tag: "maven-node:maven3-openjdk-11-nodelts"
+      buildFile: "maven/jdk11/Node16"
+      tag: "dahool/maven-node:maven3-openjdk-11-node16"
     secrets: inherit
-    
+  build-jdk20-node18:
+    uses: ./.github/workflows/_update_image.yml
+    with:
+      buildFile: "maven/jdk20/Node18"
+      tag: "dahool/maven-node:maven3-openjdk-20-nodelts,dahool/maven-node:maven3-openjdk-20-node18"
+    secrets: inherit    
+  build-jdk20-node20:
+    uses: ./.github/workflows/_update_image.yml
+    with:
+      buildFile: "maven/jdk20/Node20"
+      tag: "dahool/maven-node:maven3-openjdk-20-node20"
+    secrets: inherit
