--- a/.github/workflows/update_images.yml
+++ b/.github/workflows/update_images.yml
@@ -24,6 +24,18 @@ jobs:
       buildFile: "maven/jdk11/Node16"
       tag: "dahool/maven-node:maven3-openjdk-11-node16"
     secrets: inherit
+  build-jdk17-node18:
+    uses: ./.github/workflows/_update_image.yml
+    with:
+      buildFile: "maven/jdk17/Node18"
+      tag: "dahool/maven-node:maven3-openjdk-17-nodelts,dahool/maven-node:maven3-openjdk-17-node18"
+    secrets: inherit    
+  build-jdk17-node20:
+    uses: ./.github/workflows/_update_image.yml
+    with:
+      buildFile: "maven/jdk17/Node20"
+      tag: "dahool/maven-node:maven3-openjdk-17-node20"
+    secrets: inherit    
   build-jdk20-node18:
     uses: ./.github/workflows/_update_image.yml
     with:
