--- a/.github/workflows/update_images.yml
+++ b/.github/workflows/update_images.yml
@@ -1,50 +1,18 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and Publish
+name: Build and Publish ALL
 
 on:
-  push:
-    branches:
-    - master
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 1 * *'
 
 jobs:
-  build-jdk11-node18:
-      uses: ./.github/workflows/_update_image.yml
-      with:
-        buildFile: "maven/jdk11/Node18"
-        tag: "dahool/maven-node:maven3-openjdk-11-nodelts,dahool/maven-node:maven3-openjdk-11-node18"
-      secrets: inherit
-  build-jdk11-node16:
-    uses: ./.github/workflows/_update_image.yml
-    with:
-      buildFile: "maven/jdk11/Node16"
-      tag: "dahool/maven-node:maven3-openjdk-11-node16"
+  build-jdk11:
+    uses: ./.github/workflows/update_jdk11.yml
     secrets: inherit
-  build-jdk17-node18:
-    uses: ./.github/workflows/_update_image.yml
-    with:
-      buildFile: "maven/jdk17/Node18"
-      tag: "dahool/maven-node:maven3-openjdk-17-nodelts,dahool/maven-node:maven3-openjdk-17-node18"
-    secrets: inherit    
-  build-jdk17-node20:
-    uses: ./.github/workflows/_update_image.yml
-    with:
-      buildFile: "maven/jdk17/Node20"
-      tag: "dahool/maven-node:maven3-openjdk-17-node20"
-    secrets: inherit    
-  build-jdk20-node18:
-    uses: ./.github/workflows/_update_image.yml
-    with:
-      buildFile: "maven/jdk20/Node18"
-      tag: "dahool/maven-node:maven3-openjdk-20-nodelts,dahool/maven-node:maven3-openjdk-20-node18"
-    secrets: inherit    
-  build-jdk20-node20:
-    uses: ./.github/workflows/_update_image.yml
-    with:
-      buildFile: "maven/jdk20/Node20"
-      tag: "dahool/maven-node:maven3-openjdk-20-node20"
+  build-jdk17:
+    uses: ./.github/workflows/update_jdk17.yml
     secrets: inherit
+  build-jdk20:
+    uses: ./.github/workflows/update_jdk20.yml
+    secrets: inherit      
