--- a/.github/workflows/update_jdk11.yml
+++ b/.github/workflows/update_jdk11.yml
@@ -17,11 +17,17 @@ jobs:
     uses: ./.github/workflows/_update_image.yml
     with:
       buildFile: "maven/jdk11/Node18"
-      tag: "dahool/maven-node:maven3-openjdk-11-nodelts,dahool/maven-node:maven3-openjdk-11-node18"
+      tag: "dahool/maven-node:maven3-openjdk-11-node18"
     secrets: inherit
-  build-jdk11-node16:
+  build-jdk11-node20:
     uses: ./.github/workflows/_update_image.yml
     with:
-      buildFile: "maven/jdk11/Node16"
-      tag: "dahool/maven-node:maven3-openjdk-11-node16"
+      buildFile: "maven/jdk11/Node20"
+      tag: "dahool/maven-node:maven3-openjdk-11-node20"
+    secrets: inherit
+  build-jdk11-node22:
+    uses: ./.github/workflows/_update_image.yml
+    with:
+      buildFile: "maven/jdk11/Node20"
+      tag: "dahool/maven-node:maven3-openjdk-11-node22"
     secrets: inherit
